AO3-7213 - Adjust styling to ensure 'Suggest a Language' button is clickable on narrow screens

--- a/public/stylesheets/site/2.0/10-types-groups.css
+++ b/public/stylesheets/site/2.0/10-types-groups.css
@@ -126,7 +126,11 @@ https://otwcode.github.io/docs/patterns/indexes.html
 dl.index {
   margin: 0.643em 0;
   border: none;
-    box-shadow: none;
+  box-shadow: none;
+}
+
+dl.language {
+  clear: right;
 }
 
 dl.index dt {
